WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
311389
[Site isolation] Custom cursor images don't work in cross-origin subframes
https://bugs.webkit.org/show_bug.cgi?id=311389
Summary
[Site isolation] Custom cursor images don't work in cross-origin subframes
Lily Spiniolas
Reported
2026-04-02 20:13:55 PDT
rdar://163979120
Attachments
Add attachment
proposed patch, testcase, etc.
Lily Spiniolas
Comment 1
2026-04-02 20:51:44 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/61953
EWS
Comment 2
2026-04-07 13:09:09 PDT
Committed
310732@main
(d189118ff4e6): <
https://commits.webkit.org/310732@main
> Reviewed commits have been landed. Closing PR #61953 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug