Tools/WebKitTestRunner/TestController.h
@@ -477,6 +477,7 @@ public:
 #endif
 
     void uiScriptDidComplete(const String& result, unsigned scriptCallbackID);
+    void cursorDidChange(WKStringRef cursorInfo);
 
 #if PLATFORM(MAC)
     // Client accessibility testing support
@@ -850,6 +851,7 @@ private:
         Vector<WKRetainPtr<WKJSHandleRef>> m_callbacks;
     };
     Callbacks m_tooltipCallbacks;
+    Callbacks m_cursorCallbacks;
     Callbacks m_beginSwipeCallbacks;
     Callbacks m_willEndSwipeCallbacks;
     Callbacks m_didEndSwipeCallbacks;
